2014-10-27 Martin <tripiana@cern.ch>
	* Add options for max number of events and jOption.
	* Fix data paths for running in batch/grid mode.

2014-10-26 Martin <tripiana@cern.ch>
	* Fix passMCor (+ avoid zero-pt warnings)
	* Fix bad_alloc crash.
	* Tagging SusyAnalysis-00-00-05


2014-10-24 Martin <tripiana@cern.ch>
	* Add overlap removal option to jO.
	* Fix store cleaning when running in genPU mode.
	* Fix Stop and Monojet jOptions.

2014-10-21 Martin <tripiana@cern.ch>
	* Move to Base,2.0.14
	* New MET re-building in ST
	* Fix m_top
	* Add submit_batch script.

2014-10-20 Martin <tripiana@cern.ch>
	* Move to Base-2.0.13
	* Update to new ST decoration


2014-08-29 Martin <tripiana@cern.ch>
	* Move to Base-2.0.12
	* Add chorizoEDM.h header to hold all EDM no-cint-friendly
	* Update to new PileupReweightingTool
	* Update to new electron EDM (now available in ST)
	* Update to new TileTripReader
	* Fix CP systematic set
	* Remove old SUSYObjDef dependencies
	* Fix all paths relative to $ROOTCOREBIN (grid friendly)
	* Tagging SusyAnalysis-00-00-04

2014-08-29 Martin <tripiana@cern.ch>
	* Fix met & other variables
	* Fix btag filling. NOTE: use IP3DSV1 tagger to get something out (MV1 weights not saved yet)
	* Fix PDF_w   (still old pdf parameters enum, as in xAODTruth-00-00-23)
	* Add dummy values for variables init (DUMMYUP, DUMMYDN)
	* Tag SusyAnalysis-00-00-03

2014-08-28 Martin <tripiana@cern.ch>
	* Move to Base-2.0.7 .
	* Move to Asg_Lhapdf package (LHAPDF6). pdfsets from cvmfs now. PDFTool deprecated, replaced by our own implementation for v6.
	* Update meta-data magic to accomodate user-defined samples
	* Update scripts to run in batch
	* Tag SusyAnalysis-00-00-02

2014-08-25 Martin <tripiana@cern.ch>
	* Add scripts for job submission.

2014-08-25 Martin <tripiana@cern.ch>
	* Add run wrapper to allow for multiple-id samples & systematics.
	* Add missing files.

2014-08-23 Martin <tripiana@cern.ch>
	* Add MET recalculation, via SUSYTools.
